# portia-sdk-python

./: LICENSE  README.md  pyproject.toml
portia/: model.py
portia/builder/: reference.py
portia/execution_agents/utils/: step_summarizer.py
portia/introspection_agents/: default_introspection_agent.py
portia/open_source_tools/: image_understanding_tool.py
tests/integration/: test_e2e.py  test_model.py
tests/integration/open_source_tools/: test_browser_tool.py
tests/unit/: test_config.py  test_model.py  test_tool_wrapper.py
tests/unit/open_source_tools/: test_browser_tool.py  test_image_understanding_tool.py  test_pdf_reader_tool.py
